tests/rosetta/out/Swift/cartesian-product-of-two-or-more-lists-1.error
run error: exit status 1
/tmp/TestMochiToSwiftcartesian-product-of-two-or-more-lists-1595542820/001/main.swift:3:22: error: cannot assign value of type '[Any]' to type '[[Int]]'
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:56:05Z
 2 | func cart2(_ a: [Int], _ b: [Int]) -> [[Int]] {
 3 |     var p: [[Int]] = [Any]()
   |                      |- error: cannot assign value of type '[Any]' to type '[[Int]]'
   |                      `- note: arguments to generic parameter 'Element' ('Any' and '[Int]') are expected to be equal
 4 |     for x in a {
 5 |         for y in b {

/tmp/TestMochiToSwiftcartesian-product-of-two-or-more-lists-1595542820/001/main.swift:15:13: warning: variable 'row' was never mutated; consider changing to 'let' constant
13 |     var i = 0
14 |     while i < lst.count {
15 |         var row = lst[i]
   |             `- warning: variable 'row' was never mutated; consider changing to 'let' constant
16 |         s = s + "["
17 |         var j = 0

/tmp/TestMochiToSwiftcartesian-product-of-two-or-more-lists-1595542820/001/main.swift:37:31: error: cannot convert value of type '[Any]' to expected argument type '[Int]'
35 |     print(llStr(cart2([1, 2], [3, 4])))
36 |     print(llStr(cart2([3, 4], [1, 2])))
37 |     print(llStr(cart2([1, 2], [Any]())))
   |                               |- error: cannot convert value of type '[Any]' to expected argument type '[Int]'
   |                               `- note: arguments to generic parameter 'Element' ('Any' and 'Int') are expected to be equal
38 |     print(llStr(cart2([Any](), [1, 2])))
39 | }

/tmp/TestMochiToSwiftcartesian-product-of-two-or-more-lists-1595542820/001/main.swift:38:23: error: cannot convert value of type '[Any]' to expected argument type '[Int]'
36 |     print(llStr(cart2([3, 4], [1, 2])))
37 |     print(llStr(cart2([1, 2], [Any]())))
38 |     print(llStr(cart2([Any](), [1, 2])))
   |                       |- error: cannot convert value of type '[Any]' to expected argument type '[Int]'
   |                       `- note: arguments to generic parameter 'Element' ('Any' and 'Int') are expected to be equal
39 | }
40 | main()
