tests/rosetta/out/Swift/cartesian-product-of-two-or-more-lists-1.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:56:05Z
func cart2(_ a: [Int], _ b: [Int]) -> [[Int]] {
    var p: [[Int]] = [Any]()
    for x in a {
        for y in b {
            p = p + [[x, y]]
        }
    }
    return p
}
func llStr(_ lst: [[Int]]) -> String {
    var s = "["
    var i = 0
    while i < lst.count {
        var row = lst[i]
        s = s + "["
        var j = 0
        while j < row.count {
            s = s + String(row[j])
            if j < row.count - 1 {
                s = s + " "
            }
            j = j + 1
        }
        s = s + "]"
        if i < lst.count - 1 {
            s = s + " "
        }
        i = i + 1
    }
    s = s + "]"
    return s
}
func main() {
    print(llStr(cart2([1, 2], [3, 4])))
    print(llStr(cart2([3, 4], [1, 2])))
    print(llStr(cart2([1, 2], [Any]())))
    print(llStr(cart2([Any](), [1, 2])))
}
main()
